# dockerfile-maven-plugin

./: .dockerignore  Dockerfile  README.md  pom.xml  pyproject.toml  setup.cfg
src/main/java/com/example/demo/: HelloController.java
src/test/java/com/example/demo/: HelloControllerTest.java
src/your_package/: __init__.py  main.py
tests/: test_main.py
