[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-package"
version = "0.1.0"
description = "A sample Python project with CI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    'pytest-cov>=5.0',
    "coverage>=7.6",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "mypy>=1.10",
    "pre-commit>=3.8"
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/your_package"]

[tool.coverage.report]
show_missing = true
skip_covered = true
